Route LM Studio/Ollama through Docker internal proxy endpoints

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 APP_PORT=8093
 MCP_PORT=8193
 SEARX_PORT=8393
+LMSTUDIO_BASE=http://host.docker.internal:1234
+OLLAMA_BASE=http://host.docker.internal:11434
