Add HF live-demo cookie quota gating (2-query limit)

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ MCP_PORT=8193
 SEARX_PORT=8393
 LMSTUDIO_BASE=http://host.docker.internal:1234
 OLLAMA_BASE=http://host.docker.internal:11434
+LIVE_DEMO_MODE=false
+LIVE_DEMO_QUERY_LIMIT=2
