HF demo: use Ollama release binaries + Qwen3 small default + clear 2-interaction demo notice

--- a/hf-space/Dockerfile
+++ b/hf-space/Dockerfile
@@ -2,11 +2,24 @@ FROM node:20-bookworm-slim
 
 WORKDIR /app
 
+ARG TARGETARCH
+
 RUN apt-get update && apt-get install -y --no-install-recommends \
     python3 python3-pip python3-venv ca-certificates curl zstd \
     && rm -rf /var/lib/apt/lists/*
 
-RUN curl -fsSL https://ollama.com/install.sh | sh
+RUN set -eux; \
+    arch="${TARGETARCH:-}"; \
+    if [ -z "$arch" ]; then \
+      u="$(uname -m)"; \
+      [ "$u" = "x86_64" ] && arch="amd64" || true; \
+      [ "$u" = "aarch64" ] && arch="arm64" || true; \
+    fi; \
+    [ "$arch" = "amd64" ] || [ "$arch" = "arm64" ]; \
+    curl -fsSL "https://github.com/ollama/ollama/releases/latest/download/ollama-linux-${arch}.tar.zst" -o /tmp/ollama.tar.zst; \
+    tar --zstd -xf /tmp/ollama.tar.zst -C /usr/local; \
+    rm -f /tmp/ollama.tar.zst; \
+    /usr/local/bin/ollama --version
 
 COPY AppAgent.html /app/AppAgent.html
 COPY assets /app/assets
@@ -24,7 +37,7 @@ ENV MCP_BASE=http://127.0.0.1:8090
 ENV SEARX_BASE=https://searx.be
 ENV OLLAMA_BASE=http://127.0.0.1:11434
 ENV OLLAMA_HOST=127.0.0.1:11434
-ENV OLLAMA_MODEL=gemma3:1b
+ENV OLLAMA_MODEL=qwen3:0.6b-q4_K_M
 ENV OLLAMA_GGUF_URL=
 ENV OLLAMA_NUM_CTX=2048
 ENV OLLAMA_TEMPERATURE=0.2
