HF Space: set default GGUF to Qwen3-0.6B PreSINQ Q4_K_S

--- a/hf-space/Dockerfile
+++ b/hf-space/Dockerfile
@@ -52,8 +52,8 @@ ENV OLLAMA_BASE=http://127.0.0.1:11434
 ENV LLAMA_HOST=127.0.0.1
 ENV LLAMA_PORT=11434
 ENV LLAMA_MODEL_PATH=/data/models/model.gguf
-ENV LLAMA_MODEL_NAME=qwen2.5-0.5b-instruct-q4_k_m
-ENV LLAMA_MODEL_URL=https://huggingface.co/bartowski/Qwen2.5-0.5B-Instruct-GGUF/resolve/main/Qwen2.5-0.5B-Instruct-Q4_K_M.gguf
+ENV LLAMA_MODEL_NAME=qwen3-0.6b-presinq-q4_k_s
+ENV LLAMA_MODEL_URL=https://huggingface.co/huawei-csl/Qwen3-0.6B-PreSINQ-GGUF/resolve/main/Qwen3-0.6B-presinq-Q4_K_S.gguf
 ENV LLAMA_CTX_SIZE=2048
 ENV LLAMA_THREADS=4
 ENV LLAMA_TEMPERATURE=0.2
